# ivs_project_2

./: .gitignore  CMakeLists.txt  Makefile  README.md  env.cmake  hodnoceni.txt  inno_setup_script.iss  skutecnost.txt
doc/: uzivatelska_prirucka.docx
plan/: xborek12_xjestr04_xhrubo01_plan.txt  xborek12_xjestr04_xhrubo01_xkento00_plan.txt
profiling/: data.txt
src/: Doxyfile  Makefile  calc.cpp  data.txt  debug.cpp  profiling.cpp
src/includes/: math.cpp  math.h  stack.cpp  stack.h
src/tests/: math_test.cpp
src/ui/: CMakeLists.txt  help.cpp  help.h  help.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
src/ui/kalkulacka/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/ui/kalkulacka - kopie - 08.04.2023/: CMakeLists.txt  main.cpp  mainwindow.cpp
tests/: math_test.cpp
